cmsTaskOverviewWebServer: specify title

--- a/cmstaskoverview/templates/error.html
+++ b/cmstaskoverview/templates/error.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        
+        <title> Overview of Available Tasks &mdash; Error </title>
+        
         <link rel="stylesheet" href="/static/css/bootstrap.css">
         <link rel="stylesheet" href="/static/css/style.css">
     </head>
