--- a/cmstaskoverview/templates/overview.html
+++ b/cmstaskoverview/templates/overview.html
@@ -6,6 +6,8 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
+        <title> Overview of Available Tasks </title>
+
         <link rel="stylesheet" href="static/css/bootstrap.css">
         <link rel="stylesheet" href="static/css/cws_style.css">
         <link rel="stylesheet" href="static/css/style.css">
