cmsTaskOverviewWebServer: fix compatibility issues with Chromium
In Chromium...
 ... position:relative does not work on <tr> (breaking the update animations)
 ... the click event is fired even if we move the mouse between down and up (breaking dateslider)
 ... <divs> are dragged-and-dropped easily (which is really annoying when working with rangeslider)
All of the issues should be fixed with this commit.

--- a/cmstaskoverview/static/css/rangeslider.css
+++ b/cmstaskoverview/static/css/rangeslider.css
@@ -3,7 +3,7 @@ div.range-slider-info {
     display:flex;
 }
 
-div.unselectable {
+.unselectable {
     -moz-user-select:none;
     -ms-user-select:none;
     -webkit-user-select:none;
