--- a/cmstaskoverview/templates/overview.html
+++ b/cmstaskoverview/templates/overview.html
@@ -142,7 +142,7 @@
         </div>
         
         <div class="modal wide" id="col-select-dialog">
-            <div class="modal-header">
+            <div class="modal-header unselectable">
                 <button type="button" class="close" onClick="close_modal('col-select')">&#xD7;</button>
                 <h3>Select Columns</h3>
             </div>
@@ -184,7 +184,7 @@
             </div>
         </div>
         
-        <div class="modal wide" id="row-select-dialog">
+        <div class="modal wide unselectable" id="row-select-dialog">
             <div class="modal-header">
                 <button type="button" class="close" onClick="close_modal('row-select')">&#xD7;</button>
                 <h3>Add/Remove Search Criteria</h3>
