--- a/cmstaskoverview/templates/overview.html
+++ b/cmstaskoverview/templates/overview.html
@@ -256,5 +256,13 @@
         <table class="table table-striped table-bordered overview" id="overview">
             <!-- data insert via javascript:fill_table() -->
         </table>
+        
+        <div id = "json-errors" class="alert alert-block alert-error notification json-info no-errors">
+            <h4 class="alert-heading"> WARNING! </h4>
+            <p style="margin-top:5px;"> The info.json files for the following tasks have issues:</p>
+            <span id="tasks-with-issues">
+                <!-- data insert in javascript:fill_table() -->
+            </span>
+        </div>
     </body>
 </html>
