cmsTaskOverviewWebServer: integrate more closely into the cms

--- a/cms/server/taskoverview/templates/overview.html
+++ b/cms/server/taskoverview/templates/overview.html
@@ -9,7 +9,7 @@
         <title> Overview of Available Tasks </title>
 
         <link rel="stylesheet" href="static/css/bootstrap.css">
-        <link rel="stylesheet" href="static/css/cws_style.css">
+        <link rel="stylesheet" href="static/cws_style.css">
         <link rel="stylesheet" href="static/css/style.css">
         <link rel="stylesheet" href="static/css/download.css">
         <link rel="stylesheet" href="static/css/slider.css">
