cmsTaskOverviewWebServer: minor UI polish

--- a/cms/server/taskoverview/templates/error.html
+++ b/cms/server/taskoverview/templates/error.html
@@ -6,7 +6,7 @@
         <title> Overview of Available Tasks &mdash; Error </title>
         
         <link rel="stylesheet" href="/static/css/bootstrap.css">
-        <link rel="stylesheet" href="/static/css/style.css">
+        <link rel="stylesheet" href="/static/css/over_style.css">
     </head>
     <body style="padding-left:.5%;">
         <div class="navbar header">
