--- a/cms/server/templates/overview/overview.html
+++ b/cms/server/templates/overview/overview.html
@@ -10,7 +10,7 @@
 
         <link rel="stylesheet" href="static/css/bootstrap.css">
         <link rel="stylesheet" href="static/cws_style.css">
-        <link rel="stylesheet" href="static/css/style.css">
+        <link rel="stylesheet" href="static/css/over_style.css">
         <link rel="stylesheet" href="static/css/download.css">
         <link rel="stylesheet" href="static/css/slider.css">
         <link rel="stylesheet" href="static/css/dateslider.css">
