cmsTaskOverviewWebServer: fix the issues mentioned by @magula

--- a/cms/server/taskoverview/templates/overview.html
+++ b/cms/server/taskoverview/templates/overview.html
@@ -1,4 +1,4 @@
-{% from cmstaskoverview.TaskInfo import TaskInfo %}
+{% from cms.io.TaskInfo import TaskInfo %}
 {% import json %}
 
 <!DOCTYPE html>
