--- a/cms/server/templates/overview/overview.html
+++ b/cms/server/templates/overview/overview.html
@@ -1,4 +1,4 @@
-{% from cmstaskoverview.TaskInfo import TaskInfo %}
+{% from cms.io.TaskInfo import TaskInfo %}
 {% import json %}
 
 <!DOCTYPE html>
