--- a/cms/server/taskoverview/templates/error.html
+++ b/cms/server/taskoverview/templates/error.html
@@ -5,8 +5,8 @@
         
         <title> Overview of Available Tasks &mdash; Error </title>
         
-        <link rel="stylesheet" href="/static/css/bootstrap.css">
-        <link rel="stylesheet" href="/static/css/over_style.css">
+        <link rel="stylesheet" href="../../static/css/bootstrap.css">
+        <link rel="stylesheet" href="../../static/css/over_style.css">
     </head>
     <body style="padding-left:.5%;">
         <div class="navbar header">
