--- a/cms/server/taskoverview/templates/error.html
+++ b/cms/server/taskoverview/templates/error.html
@@ -5,20 +5,20 @@
         
         <title> Overview of Available Tasks &mdash; Error </title>
         
-        <link rel="stylesheet" href="../../static/css/bootstrap.css">
-        <link rel="stylesheet" href="../../static/css/over_style.css">
+        <link rel="stylesheet" href="./../static/css/bootstrap.css">
+        <link rel="stylesheet" href="./../static/css/over_style.css">
     </head>
     <body style="padding-left:.5%;">
         <div class="navbar header">
                 <div class="navbar-inner header-inner">
                     <div style="display:flex;flex-direction:row;align-items:center;justify-content:space-between;">
                     <div>
-                        <a class="brand" href="../..">
+                        <a class="brand" href="./..">
                             Overview of Available Tasks
                         </a>
                     </div>
                     <div>
-                        <button class="btn btn-primary btn-large" onclick="window.location.href='../..';">
+                        <button class="btn btn-primary btn-large" onclick="window.location.href='./..';">
                             Return to Overview
                         </button> 
                     </div>
