cmsTaskOverviewWebServer: fix downloads

--- a/cms/server/taskoverview/templates/overview.html
+++ b/cms/server/taskoverview/templates/overview.html
@@ -101,6 +101,8 @@
     </head>
     
     <body>
+        <iframe id="fr-download-helper" src="./static/dummy.html" style="display:none"></iframe>
+    
         <div class="modal-backdrop invisible" id="modal-backdrop"></div>
         <div class="navbar header">
             <div class="navbar-inner header-inner">
