cmsTaskOverviewWebServer: minor UI polish

--- a/cms/server/taskoverview/templates/overview.html
+++ b/cms/server/taskoverview/templates/overview.html
@@ -259,7 +259,7 @@
             </div>
         </div>
         
-        <table class="table table-striped table-bordered overview" id="overview">
+        <table class="table table-bordered overview" id="overview">
             <!-- data insert via javascript:fill_table() -->
         </table>
         
