--- a/cms/server/static/css/over_style.css
+++ b/cms/server/static/css/over_style.css
@@ -48,6 +48,30 @@ table.overview tr.new > td:first-child:hover::after {
     opacity:.25;
 }
 
+table.overview tr.odd {
+    background-color:#f9f9f9;
+}
+
+table.overview tr:hover {
+    background-color:#f5f5f5;
+}
+
+table.overview td.lower-left {
+    border-bottom-left-radius:4px;
+}
+
+table.overview td.lower-right {
+    border-bottom-right-radius:4px;
+}
+
+table.overview td.upper-left {
+    border-top-left-radius:4px;
+}
+
+table.overview td.upper-right {
+    border-top-right-radius:4px;
+}
+
 ul.embedded {
     margin:0px;
     list-style-position:inside;
