make unit tests more flexible
It is now possible to specify "softer" constraints in unit tests like demanding that the score should be in a certain range.
Please use this feature wisely and sparingly.

--- a/cms/server/taskoverview/static/css/cws_style.css
+++ b/cms/server/taskoverview/static/css/cws_style.css
@@ -549,6 +549,14 @@ tr:hover td.unit_test_ok {
     background-color: hsla(120, 100%, 50%, 0.5) !important;
 }
 
+td.unit_test_mid {
+    background-color: rgba(237, 212, 0, 0.4) !important;
+}
+
+tr:hover td.unit_test_mid {
+    background-color: rgba(237, 212, 0, 0.5) !important;
+}
+
 #submission_list td.total_score.undefined,
 #unit_test_list td.total_score.undefined,
 td.no_expectations {
