--- a/cms/server/contest/templates/task_submissions.html
+++ b/cms/server/contest/templates/task_submissions.html
@@ -2,7 +2,8 @@
 
 {% block additional_js %}
 
-$(document).on("click", "#submission_list tbody tr td.status .details", function (event) {
+{% for x in ["submission_list", "unit_test_list"] %}
+$(document).on("click", "#{{x}} tbody tr td.status .details", function (event) {
     var submission_id = $(this).parent().parent().attr("data-submission");
     var modal = $("#submission_detail");
     var modal_body = modal.children(".modal-body");
@@ -26,6 +27,7 @@ $(document).on("click", "#submission_list tbody tr td.status .details", function
     });
     modal.modal("show");
 });
+{% end %}
 
 function get_score_class (score, max_score) {
     if (score <= 0) {
@@ -227,6 +229,10 @@ $(document).ready(function () {
 {% else %}
         <col class="total_score"/>
 {% end %}
+{% set any_unit_tests = any(s.is_unit_test() for s in submissions) %}
+{% if any_unit_tests %}
+        <col class="unit_test"/>
+{% end %}
 {% if actual_phase >= +3 %}
         <col class="considered_in_score"/>
 {% end %}
@@ -250,6 +256,9 @@ $(document).ready(function () {
             <th class="total_score">{{ _("Total score") }}</th>
 {% else %}
             <th class="total_score">{{ _("Score") }}</th>
+{% end %}
+{% if any_unit_tests %}
+            <th class="unit_test">{{ _("Unit test") }}</th>
 {% end %}
 {% if actual_phase >= +3 %}
             <th class="considered_in_score">{{ _("Official") }}</th>
